--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     },
     "dependencies": {
         "primeicons": "^6.0.1",
-        "primevue": "^3.23.0"
+        "primevue": "^3.23.0",
+        "vue-draggable-next": "^2.1.1",
+        "vuedraggable": "^4.1.0"
     }
 }
