--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.2",
@@ -11,11 +16,11 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-mix": "^6.0.49",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "vue": "^3.2.31"
+        "vue": "^3.2.31",
+        "vue-loader": "^16.2.0"
     },
     "dependencies": {
         "primeicons": "^6.0.1",
